--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.odsstudio.contactsbook">
-
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    package="com.odsstudio.contactsbook" >
 
     <application
         android:allowBackup="true"
@@ -15,18 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ContactsBook"
-        tools:targetApi="31">
-
-        <service
-            android:name=".services.MyService"
-            android:enabled="true"
-            android:exported="true" />
-
+        tools:targetApi="31" >
+        <activity
+            android:name=".SecondActivity"
+            android:exported="false" />
+        <!-- <service -->
+        <!-- android:name=".services.MyService" -->
+        <!-- android:enabled="true" -->
+        <!-- android:exported="true" /> -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ContactsBook">
+            android:theme="@style/Theme.ContactsBook" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
