--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,12 @@
 buildscript {
+
+    repositories {
+        google()
+    }
+    dependencies {
+        def nav_version = "2.4.2"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
     ext {
         compose_version = '1.1.1'
     }
