--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,12 @@ android {
         }
     }
 
+    android {
+        buildFeatures {
+            viewBinding true
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -55,8 +61,13 @@ dependencies {
 
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
+
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.6'
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6'
 
 
     implementation 'androidx.core:core-ktx:1.7.0'
