--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.odsstudio.contactsbook" >
 
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,13 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ContactsBook"
         tools:targetApi="31" >
-        <activity
-            android:name=".SecondActivity"
-            android:exported="false" />
-        <!-- <service -->
-        <!-- android:name=".services.MyService" -->
-        <!-- android:enabled="true" -->
-        <!-- android:exported="true" /> -->
+         <service
+         android:name=".services.MyService"
+         android:enabled="true"
+         android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
