--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ android {
 
 dependencies {
 
+    implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     def nav_version = "2.4.2"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
@@ -70,7 +72,7 @@ dependencies {
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6'
 
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
