--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".ui_fragments.MainApplication"
@@ -17,25 +19,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ContactsBook"
         tools:targetApi="31" >
-         <service
-         android:name=".services.MyService"
-         android:enabled="true"
-         android:exported="true" />
-        <service
-            android:name=".services.MyNotificationService"
-            android:enabled="true"
-            android:exported="true" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.ContactsBook" >
+        android:name=".MainActivity"
+        android:exported="true"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.ContactsBook" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".services.MyService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".services.MyNotificationService"
+            android:enabled="true"
+            android:exported="true" />
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:node="remove">
+        </provider>
     </application>
 
 </manifest>
